Reformatted table into div acting as a table due to overflow issues

--- a/src/common.css
+++ b/src/common.css
@@ -189,13 +189,32 @@ html, body {
   color: red;
 }
 
-#displayContainer {
-  border: 1px solid lightgrey;
-}
+/* Create a deck table */
 
 #displayCards {
-  width: 100%;
   height: 350px;
   overflow-x: hidden;
   overflow-y: auto;
 }
+
+#displayContainer {
+  border: 1px solid lightgrey;
+}
+
+#displayContainer .row {
+  padding: 5px 0px 5px 5px;
+  border-bottom: 1px solid darkgrey;
+}
+
+#displayContainer .quantity, #displayContainer .name {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+#displayHeader .row, #displayCards .row {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+}
+
+/* End create a deck table */
